[build-system]
requires = ["setuptools>=82", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "price_pulse_backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "fastapi==0.129.0",
  "uvicorn[standard]==0.40.0",
  "sqlalchemy==2.0.46",
  "psycopg[binary]==3.3.2",
  "alembic==1.18.4",
  "pydantic==2.12.5",
  "pydantic-settings==2.12.0",
  "python-jose==3.5.0",
  "bcrypt==5.0.0",
  "celery==5.6.2",
  "redis==7.1.1",
  "playwright==1.58.0",
  "orjson==3.11.7",
  "pytest==9.0.2"
]